fix(tpl): make delete button vertical aligned when filename has multiline

--- a/src/tpl/assert/main.css
+++ b/src/tpl/assert/main.css
@@ -232,15 +232,12 @@ em {
 
 .item-list .detail,
 .item-list .delete {
-	border-bottom: 1px #f5f5f5 solid;
-	overflow: hidden;
-	zoom: 1;
-}
-
-.item-list .detail {
 	display: flex;
 	flex-flow: row nowrap;
 	align-items: center;
+	border-bottom: 1px #f5f5f5 solid;
+	overflow: hidden;
+	zoom: 1;
 }
 
 .has-deletable .detail {
@@ -284,7 +281,7 @@ em {
 	font-weight: bold;
 	font-size: 1.6em;
 	line-height: 1em;
-	padding: 0.25em 0.3125em;
+	padding: 0.1875em 0.3125em 0.3125em;
 }
 
 .item-list .delete:hover {
